v0.10.0/_sources/generated/statsmodels.sandbox.distributions.extras.SkewNorm_gen.rst.txt
statsmodels.sandbox.distributions.extras.SkewNorm\_gen
======================================================

.. currentmodule:: statsmodels.sandbox.distributions.extras

.. autoclass:: SkewNorm_gen

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         SkewNorm_gen.__call__
         SkewNorm_gen.cdf
         SkewNorm_gen.entropy
         SkewNorm_gen.expect
         SkewNorm_gen.fit
         SkewNorm_gen.fit_loc_scale
         SkewNorm_gen.freeze
         SkewNorm_gen.interval
         SkewNorm_gen.isf
         SkewNorm_gen.logcdf
         SkewNorm_gen.logpdf
         SkewNorm_gen.logsf
         SkewNorm_gen.mean
         SkewNorm_gen.median
         SkewNorm_gen.moment
         SkewNorm_gen.nnlf
         SkewNorm_gen.pdf
         SkewNorm_gen.ppf
         SkewNorm_gen.rvs
         SkewNorm_gen.sf
         SkewNorm_gen.stats
         SkewNorm_gen.std
         SkewNorm_gen.var



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         SkewNorm_gen.random_state

